Move test annotation to concrete test methods